// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineProgress renders with colors 1`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 8px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #fcc;
  width: 100%;
  border-radius: calc(8px / 2);
  height: 8px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(8px / 2);
  background-color: #ff4747;
  height: 8px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-red"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with colors 2`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 8px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #ebebeb;
  width: 100%;
  border-radius: calc(8px / 2);
  height: 8px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(8px / 2);
  background-color: #1f1f1f;
  height: 8px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-gray"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with colors 3`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 8px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #321321;
  width: 100%;
  border-radius: calc(8px / 2);
  height: 8px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(8px / 2);
  background-color: #123123;
  height: 8px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-custom"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with custom width 1`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 10px;
  width: 100px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #ebebeb;
  width: 100%;
  border-radius: calc(10px / 2);
  height: 10px;
}

.emotion-3 {
  position: absolute;
  width: 50%;
  border-radius: calc(10px / 2);
  background-color: #1e6fff;
  height: 10px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    50%
  </span>
</div>
`;
